fixing text alignment

--- a/src/styles/About.module.scss
+++ b/src/styles/About.module.scss
@@ -10,6 +10,7 @@
 
     p {
         @include p-16;
+        text-align: left;
     }
 }
 
@@ -47,6 +48,7 @@
         p {
             @include p-16();
             margin-bottom: 8px;
+            text-align: left;
         }
 
         @media (max-width: 1302px) {
