--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -50,7 +50,7 @@
 
   &__subtitle,
   &__prevText {
-    text-align: justify;
+    text-align: left;
   }
 
   &__link {
