--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -29,7 +29,7 @@
     P {
         opacity: .8;
         margin-bottom: 8px;
-        text-align: justify;
+        text-align: left;
     }
 
     strong {
